--- a/VidCoder/Resources/Translations/MainRes.eu.resx
+++ b/VidCoder/Resources/Translations/MainRes.eu.resx
@@ -654,26 +654,88 @@
   <data name="EncodeCompleteActionAbortedDueToErrorsMessage" xml:space="preserve">
     <value>Kodeaketa osatze ekintza ez da ekin akatsak daudelako kodeaketa emaitza zerrendan.</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="AudioPickerButtonToolTip" xml:space="preserve">
+    <value>Berezgaitasunez hautatu audio bideak...</value>
+  </data>
+  <data name="SubtitlePickerButtonToolTip" xml:space="preserve">
+    <value>Berezgaitasunez hautatu azpidatzi bideak...</value>
+  </data>
+  <data name="AudioSubtitleTrackColumnHeader" xml:space="preserve">
+    <value>Bidea</value>
+    <comment>Column header for the audio or subtitle track summary. This is an an auto-generated summary that includes language, format, etc.</comment>
+  </data>
+  <data name="AudioTrackNameAutomationName" xml:space="preserve">
+    <value>Audio bidearen izena</value>
+    <comment>Narrator label for the audio track name text box.</comment>
+  </data>
+  <data name="SubtitleNameAutomationName" xml:space="preserve">
+    <value>Azpidatziaren izena</value>
+    <comment>Narrator label for the subtitle name text box.</comment>
+  </data>
+  <data name="CouldNotRecycleFile" xml:space="preserve">
+    <value>Akatsa agiriak Birziklapen-ontzira bidaltzean.</value>
+  </data>
+  <data name="DestinationAutomaticToolTip" xml:space="preserve">
+    <value>Helmuga berezgaitasunez ezartzen da. Klikatu ezarpenak editatzeko.</value>
+  </data>
+  <data name="DestinationManualToolTip" xml:space="preserve">
+    <value>Helmuga eskuz ezartzen da. Klikatu ezarpenak editatzeko.</value>
+  </data>
+  <data name="CompareAgainstOriginal" xml:space="preserve">
+    <value>Alderatu jatorrizkoarekin</value>
+  </data>
+  <data name="CompareEncodedLabel" xml:space="preserve">
+    <value>Kodeatua</value>
+    <comment>Label for the encoded video when comparing original vs encoded</comment>
+  </data>
+  <data name="CompareOriginalLabel" xml:space="preserve">
+    <value>Jatorrizkoa</value>
+    <comment>Label for the original video when comparing original vs encoded</comment>
+  </data>
+  <data name="CompareWindowHelpText" xml:space="preserve">
+    <value>Klikatu edo sakatu Ktrl kodeaketa bertsioa erakusteko.</value>
+  </data>
+  <data name="CompareWindowTitleFormat" xml:space="preserve">
+    <value>Bideo alderaketa: {0} - {1}</value>
+    <comment>Title for the Video compare window.
+{0} is a string indicating if it's original or encoded.
+{1} is the file name, e.g. MyFile.mkv</comment>
+  </data>
+  <data name="MuteAutomationName" xml:space="preserve">
+    <value>Mututu</value>
+    <comment>Text for screen readers for the mute button on video playback</comment>
+  </data>
+  <data name="UnmuteAutomationName" xml:space="preserve">
+    <value>Desmututu</value>
+    <comment>Text for screen readers for the unmute button on video playback</comment>
+  </data>
+  <data name="AutoPauseLowBattery" xml:space="preserve">
+    <value>Beresgaitasunez pausatzen bateria agortzen ari delako. </value>
+  </data>
+  <data name="AutoPauseLowDiskSpace" xml:space="preserve">
+    <value>Beresgaitasunez pausatzen diskako toki askea {0} GB-tik behera dagoelako.</value>
+    <comment>{0} is the disk space threshold for auto-pause in GB</comment>
+  </data>
+  <data name="AutoPauseProcessDetected" xml:space="preserve">
+    <value>Beresgaitasunez pausatzen, prozesua atzemanda: {0}</value>
+    <comment>{0} is the name of the process we were waiting for to pause</comment>
+  </data>
+  <data name="AutoPauseResumeBattery" xml:space="preserve">
+    <value>Beresgaitasunez berrekiten, AC argindarrera konektatuta.</value>
+  </data>
+  <data name="AutoPauseResumeDiskSpace" xml:space="preserve">
+    <value>Beresgaitasunez berrekiten, tokia askea dago diska gogorrean.</value>
+  </data>
+  <data name="AutoPauseResumeProcess" xml:space="preserve">
+    <value>Berezgaitasunez berrekiten, prozesua amaitu da.</value>
+  </data>
+  <data name="Win7DeprecationWarning" xml:space="preserve">
+    <value>VidCoder-ek ez du sostengurik jadanik Windows 7 edo 8-an.
+
+VidCoder zeure arriskupena erabiltzen jarrai dezakezu. Zenbait ezaugarrik ez dute jardungo eta beste arazo ezezgun batzuk egon daitezke.  Ez dago sostengu eskuragarririk arazo horiek gertatzean.
+
+v5 da Windows 7/8-rako dagoen azken bertsioa.
+
+Kontuz-ohar hau bi aldiz bakarrik erakutsiko da.</value>
+  </data>
 </root>
