--- a/VidCoder/Resources/Translations/PickerRes.eu.resx
+++ b/VidCoder/Resources/Translations/PickerRes.eu.resx
@@ -237,7 +237,9 @@
     <value>Iragazi izenburuak iraupenez</value>
     <comment>Name for screen readers for the checkbox to filter titles by a given duration range.</comment>
   </data>
-  
+  <data name="ChangeCaptializationLabel" xml:space="preserve">
+    <value>Aldatu hizki larri/xeheak hona</value>
+  </data>
   <data name="TimeRangeStartAutomationName" xml:space="preserve">
     <value>Denbora maila hasiera</value>
   </data>
@@ -260,42 +262,131 @@
   <data name="ChapterRangeStartAutomationName" xml:space="preserve">
     <value>Atal tartearen hasiera</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DestinationSection" xml:space="preserve">
+    <value>Helmuga</value>
+  </data>
+  <data name="OutputFolder" xml:space="preserve">
+    <value>Irteera agiritegia:</value>
+    <comment>Label for the output folder.</comment>
+  </data>
+  <data name="UseCustomFileNameFormatCheckBox" xml:space="preserve">
+    <value>Erabili norbere agiri izendatze heuskarria:</value>
+  </data>
+  <data name="WhenFileExistsBatch" xml:space="preserve">
+    <value>Agiria jadanik badagoenean (Batu):</value>
+  </data>
+  <data name="WhenFileExistsSingle" xml:space="preserve">
+    <value>Agiria jadanik badagoenean (Banaka):</value>
+  </data>
+  <data name="CustomPickerNameTemplate" xml:space="preserve">
+    <value>Norbere {0}</value>
+    <comment>The name for a custom auto-created picker. {0} is a number like 2, or 3 or 4 to differentiate it</comment>
+  </data>
+  <data name="OutputFileNameFormatAutomationName" xml:space="preserve">
+    <value>Agiri izen heuskarria</value>
+    <comment>Name for screen readers for the output file name format text box</comment>
+  </data>
+  <data name="OnlyChangeCapitalizationIfAllSameLabel" xml:space="preserve">
+    <value>Aldatu hizki larri/xeheak guztiak xeheak edo larriak badira</value>
+  </data>
+  <data name="WordBreakCharacterAutomationNameFormat" xml:space="preserve">
+    <value>Hitz hauste karakterea - {0}</value>
+    <comment>Screen reader format for word break checkboxes. These will determine if a character will be used to separate words.</comment>
+  </data>
+  <data name="WordBreakCharactersLabel" xml:space="preserve">
+    <value>Ezagutzen diren hitz hauste karaktereak:</value>
+  </data>
+  <data name="WordBreakCharacter_Dot" xml:space="preserve">
+    <value>Puntua</value>
+  </data>
+  <data name="WordBreakCharacter_Space" xml:space="preserve">
+    <value>Tartea</value>
+  </data>
+  <data name="WordBreakCharacter_Underscore" xml:space="preserve">
+    <value>Azpi-elkarmarra</value>
+  </data>
+  <data name="ChangeWordSeparatorLabel" xml:space="preserve">
+    <value>Aldatu hitz banantzailea hona</value>
+  </data>
+  <data name="SourceCleanupPreviewLabel" xml:space="preserve">
+    <value>Aurreikuspena:</value>
+  </data>
+  <data name="SourceNameCleanupSection" xml:space="preserve">
+    <value>Iturburu izen garbiketa</value>
+  </data>
+  <data name="AddAudioTrackNameButton" xml:space="preserve">
+    <value>Gehitu audio bidearen izena</value>
+    <comment>Button to add another name to the list of audio track names in the Picker.</comment>
+  </data>
+  <data name="AddSubtitleTrackNameButton" xml:space="preserve">
+    <value>Gehitu azpidatzi bidearen izena</value>
+    <comment>Button to add another name to the list of subtitle track names in the Picker.</comment>
+  </data>
+  <data name="CustomTrackNamesCheckBox" xml:space="preserve">
+    <value>Norbere bide izenak</value>
+    <comment>Checkbox label to use custom audio or subtitle track names</comment>
+  </data>
+  <data name="TrackAutomationFormat" xml:space="preserve">
+    <value>Bidea {0}</value>
+    <comment>Screen reader format for track names in the Picker.</comment>
+  </data>
+  <data name="BurnInLabel" xml:space="preserve">
+    <value>Erre:</value>
+  </data>
+  <data name="PickerAudioSectionName" xml:space="preserve">
+    <value>Audioa</value>
+  </data>
+  <data name="PickerForeignAudioCheckBox" xml:space="preserve">
+    <value>Gehitu 'Beste hizkuntzetako audio bilaketa' bidea</value>
+  </data>
+  <data name="PickerSubtitleSectionName" xml:space="preserve">
+    <value>Azpidatziak</value>
+  </data>
+  <data name="SubtitleSelectionMode_ForeignAudioSearch" xml:space="preserve">
+    <value>Beste hizkuntzako audio bilaketa</value>
+  </data>
+  <data name="TrackSelectionLabel" xml:space="preserve">
+    <value>Bide hautapena:</value>
+    <comment>Label for track selection mode for audio or subtitle tracks.</comment>
+  </data>
+  <data name="AudioSelectionModeToolTip" xml:space="preserve">
+    <value>Azken hautapena - Hautaturiko azken audio bidea hautatzen du bat datorrena aurkituz gero, beste lehena hautatzen du.
+Lehena - Barneratu lehen audio bidea bakarrik
+Aurkibidez - Hautatu bide aurkibidez (1-oinarrituta)
+Hizkuntza(k) - Hautatu hizkuntzaz
+Guztiak - Barneratu audio bide guztiak.</value>
+  </data>
+  <data name="SubtitleSelectionModeToolTip" xml:space="preserve">
+    <value>Azken hautapena - Hautaturiko azken azpidatzi bidea hautatzen du bat datorrena aurkituz gero, beste lehena hautatzen du.
+Ezer ez - Ez da azpidatzirik barneratzen
+Lehena - Barneratu lehen azpidtzi bidea bakarrik
+Aurkibidez - Hautatu bide aurkibidez (1-oinarrituta)
+Hizkuntza(k) - Hautatu hizkuntzaz
+Guztiak - Barneratu azpidatzi bide guztiak.</value>
+  </data>
+  <data name="IgnoreFilesBelowCheckBox" xml:space="preserve">
+    <value>Ezikusi azpiko agiriak</value>
+    <comment>A number box follows this string: Ignore files below [ 10 ] MB</comment>
+  </data>
+  <data name="TimeRangeLabel" xml:space="preserve">
+    <value>Denbora maila:</value>
+  </data>
+  <data name="VideoSelectionSection" xml:space="preserve">
+    <value>Bideo hautapena</value>
+  </data>
+  <data name="MetadataSection" xml:space="preserve">
+    <value>Metadatuak</value>
+  </data>
+  <data name="PassThroughMetadataCheckBox" xml:space="preserve">
+    <value>Igaro bideo metadatuak (zuzendaria, argitapen data, antzezleak, etab.)</value>
+  </data>
   <data name="BurnInCheckBox" xml:space="preserve">
     <value>Erre</value>
   </data>
-  
-  
+  <data name="ExternalSubtitleImportCheckBox" xml:space="preserve">
+    <value>Gehitu sarrera bideo agiriak duen izen bereko kanpoko azpidatzi agiriak {0}</value>
+  </data>
+  <data name="LanguageLabel" xml:space="preserve">
+    <value>Hizkuntza:</value>
+  </data>
 </root>
